problemas em relação a importação

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concessionária</title>
-    <script type="module" src="js/Script.js"></script>
-    
+    <script type="module" src="js/Concessionaria/Modelos/interface/interfaceCliente.js"></script>
 </head>
 <body>
     <h1>Eu sou uma Concessionária</h1>
@@ -20,7 +19,7 @@
         
         <label for="dataNasc">Data de Nascimeno</label>
         <input type="date" id="dataNasc" name="dataNasc"><br><br>
-        <button type="submit" value="Submit" onclick="coletar()">
-    <script src="js/Concessionaria/Modelos/interface/interfaceCliente.js"></script>
+        <button type="submit" value="Submit" id="btnEnviarDadosCliente">
+   
 </body>
 </html>
