--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concessionária</title>
     <script type="module" src="js/Concessionaria/Modelos/interface/interfaceCliente.js"></script>
+    <script type="module" src="./js/Script.js"></script>
 </head>
 <body>
     <h1>Eu sou uma Concessionária</h1>
