--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
     <h1>Eu sou uma Concessionária</h1>
         <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome"><br><br>
+        <input type="text" id="nome" name="nome" class="inputCadastro"><br><br>
         
         <label for="usuario">Usuario</label>
-        <input type="text" id="usuario" name="usuario"><br><br>
+        <input type="text" id="usuario" name="usuario" class="inputCadastro"><br><br>
 
-        <label for="cpf">CPF: </label>
-        <input type="text" name="cpf" id="cpf" \ pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}" \ title="Digite um CPF no formato: xxx.xxx.xxx-xx"><br><br>
+        <label for="cpf">CPF:</label>
+        <input type="number" name="cpf" id="cpf" class="inputCadastro"\ pattern="\d{3}\.?\d{3}\.?\d{3}-?\d{2}" \ title="Digite um CPF no formato: xxx.xxx.xxx-xx"><br><br>
         
         <label for="dataNasc">Data de Nascimeno</label>
-        <input type="date" id="dataNasc" name="dataNasc"><br><br>
+        <input type="date" id="dataNasc" name="dataNasc" class="inputCadastro"><br><br>
         <button type="submit" value="Submit" id="btnEnviarDadosCliente">
-   
+
 </body>
 </html>
