melhorando semantica e implementando boas práticas

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <button type="submit" value="Submit" id="btnEnviarDadosCliente">enviar</button>
 
         <h2>------------------------------------------------------------------------------</h2>
-        
+        <label for="cor">Modelo:</label>
+        <input type="text" id="modelo" name="modelo" class="inputCadastro"><br><br>
+
         <label for="cor">Cor:</label>
         <input type="text" id="cor" name="cor" class="inputCadastro"><br><br>
         
